tampilan baru dan logic

--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
+    "react-select-search": "^3.0.8",
+    "react-sidebar": "^3.0.2",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.1",
     "rsuite": "^4.10.2",
