--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "usadhabhakti",
   "version": "0.1.0",
+  "homepage": "https://belogherbal.com/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
