--- a/.env
+++ b/.env
@@ -32,3 +32,4 @@ REACT_APP_API_TRANSFER = /api/close/transfer
 REACT_APP_API_UPLOAD_IMG = /api/close/upload-img
 REACT_APP_API_WITHDRAW = /api/close/withdraw
 REACT_APP_API_AGENT_SHOW = /api/close/agent/
+REACT_APP_API_MEMBER_NEW = /api/close/members-pagination
