--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "usadhabhakti",
   "version": "0.1.0",
-  "homepage": "https://belogherbal.com/",
+  "homepage": "https://testweb.belogherbal.com/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -19,10 +19,13 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-next-paging": "^7.0.7",
+    "react-paginate": "^7.1.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
+    "react-searchable-dropdown": "^2.0.3",
     "react-select-search": "^3.0.8",
     "react-sidebar": "^3.0.2",
     "react-spinners": "^0.11.0",
