--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=https://testupgrade.belogherbal.com
+REACT_APP_BASE_URL=https://admin.belogherbal.com
 REACT_APP_ONESIGNAL_APPID = 25a467b9-b720-4e57-8ca6-21eda8faf5f5
 REACT_APP_API_NUSA_SMS = https://api.nusasms.com/api/v3/sendsms/plain?user=usadhabhakti_api&password=@Wighnam_221
 REACT_APP_API_LOGIN = /api/open/login
