--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ REACT_APP_API_WITHDRAW = /api/close/withdraw
 REACT_APP_API_AGENT_SHOW = /api/close/agent/
 REACT_APP_API_MEMBER_NEW = /api/close/members-pagination
 REACT_APP_API_POINT_BALANCE = /api/close/points
+REACT_APP_MEMBER_TREE = /api/close/member-tree
+REACT_APP_API_REGISTER_DOWNLINE_NEW = /api/close/register-downline-custpackage
