--- a/.env
+++ b/.env
@@ -36,3 +36,4 @@ REACT_APP_API_MEMBER_NEW = /api/close/members-pagination
 REACT_APP_API_POINT_BALANCE = /api/close/points
 REACT_APP_MEMBER_TREE = /api/close/member-tree
 REACT_APP_API_REGISTER_DOWNLINE_NEW = /api/close/register-downline-custpackage
+REACT_APP_API_ACTIVATION = /api/close/activate-custpackage
