--- a/.env
+++ b/.env
@@ -37,3 +37,4 @@ REACT_APP_API_POINT_BALANCE = /api/close/points
 REACT_APP_MEMBER_TREE = /api/close/member-tree
 REACT_APP_API_REGISTER_DOWNLINE_NEW = /api/close/register-downline-custpackage
 REACT_APP_API_ACTIVATION = /api/close/activate-custpackage
+REACT_APP_API_UPGRADE = /api/close/upgrade-custpackage
